--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon --watch './**/*.ts' --exec \"ts-node\" ./src/index.ts",
     "build": "npx tsc",
     "start:prod": "npm run build && node dist/index.js",
-    "lint": "eslint .", 
+    "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write src/**/*.ts",
     "test": "npx tsc && jasmine"
@@ -16,8 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jasmine": "^3.10.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
+    "@types/sharp": "^0.29.5",
+    "@types/supertest": "^2.0.11",
+    "jasmine": "^4.0.2",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "ts-node": "^10.7.0",
@@ -26,6 +30,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "jasmine-spec-reporter": "^7.0.0",
+    "morgan": "^1.10.0",
+    "sharp": "^0.30.2",
+    "supertest": "^6.2.2"
   }
 }
