--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@types/node": "^17.0.21",
     "@types/sharp": "^0.29.5",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jasmine": "^4.0.2",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
