--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "jasmine-spec-reporter": "^7.0.0",
+    "supertest": "^6.2.2"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jasmine-spec-reporter": "^7.0.0",
     "morgan": "^1.10.0",
-    "sharp": "^0.30.2",
-    "supertest": "^6.2.2"
+    "sharp": "^0.30.2"
   }
 }
